# transmutate

./: .gitignore  README.md  golabi.py  pyproject.toml
.github/workflows/: lint.yml  publish.yml  python-tests.yml
tests/: test_Services.py  test_base_model.py  test_classes.py  test_json_handler.py  test_jsonb_handler.py  test_proto_generator.py  test_proto_handler.py
transmutate/: Services.py  __init__.py  base_model.py  json_handler.py  jsonb_handler.py  proto_generator.py  proto_handler.py
transmutate/base_model/: base.py  protobuf.py  serialization.py  validation.py
