[tool.poetry]
name = "transmutate"
version = "0.2.0"
description = "A versatile library for transforming and serializing data models into multiple formats."
authors = ["Ali Tavallaie <a.tavallaie@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
